# ir-remote

./: .gitignore  .pre-commit-config.yaml  README.md  irMasterConfig.json  irRemote.service  launchremote.py  mqtt.py  pyproject.toml  remote.py  test  webserver.py
config/: Panasonic_N2QAYB000048.json  Samsung_BN59-00940A.json
ir_remote/: launchremote.py  mqtt.py  remote.py  remotelog.py  webserver.py
templates/: full-log.html  log.html  main.html  select.html  settings.html
