[project]
name = "ir-remote"
version = "0.1.0"
description = "Python API IR remote"
license = {text = "GPL-3.0-or-later"}
authors = [ { name = "Allan Beth", "email" = "allanbeth@hotmail.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "flask",
    "flask-restful",
    "paho-mqtt"
]

[project.scripts]
ir-remote = "ir_remote.launchremote:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
