[project]
name = "ir-remote"
version = "0.1.0"
description = "Python API IR remote"
license = {text = "GPL-3.0-or-later"}
authors = [ { name = "Allan Beth", "email" = "allanbeth@hotmail.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "flask",
    "flask-restful",
    "paho-mqtt",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.1",
]

[project.scripts]
ir-remote = "ir_remote.launchremote:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"

[tool.ruff.format]
# Auto picks the first line ending encountered in a file
# Change to lf or cr-lf as required
line-ending = "auto"

[tool.ruff.lint]
select = [
  "F",  # pyflakes
  "E4", "E7", "E9"
  #"E",  # pycodestyle errors
  # Can be enabled selectively
  #"W", # pycodestyle warnings
  #"D",  # pydocstyle
  #"UP",  # pyupgrade
  #"B",  # flake8-bugbear
  #"SIM",  # flake8-simplify
  #"FA", # flake8-future-annotations
  #"I",  # isort
  #"S",  # bandit
  #"PT",  # flake8-pytest-style
  #"LOG",  # flake8-logging
  #"G",  # flake8-logging-format
]

ignore = [
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in `__init__`
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

